// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout renders string width correctly 1`] = `
<aside
  class="ezd-layout-sider ezd-layout-sider-dark"
  style="flex:0 0 200px;max-width:200px;min-width:200px;width:200px"
>
  <div
    class="ezd-layout-sider-children"
  >
    Sider
  </div>
</aside>
`;

exports[`Layout rtl render component should be rendered correctly in RTL direction 1`] = `
<section
  class="ezd-layout ezd-layout-rtl"
/>
`;

exports[`Layout rtl render component should be rendered correctly in RTL direction 2`] = `
<main
  class="ezd-layout-content"
/>
`;

exports[`Layout rtl render component should be rendered correctly in RTL direction 3`] = `
<aside
  class="ezd-layout-sider ezd-layout-sider-dark"
  style="flex:0 0 200px;max-width:200px;min-width:200px;width:200px"
>
  <div
    class="ezd-layout-sider-children"
  />
</aside>
`;

exports[`Layout should be controlled by collapsed 1`] = `
<Sider>
  <aside
    className="ezd-layout-sider ezd-layout-sider-dark"
    style={
      Object {
        "flex": "0 0 200px",
        "maxWidth": "200px",
        "minWidth": "200px",
        "width": "200px",
      }
    }
  >
    <div
      className="ezd-layout-sider-children"
    >
      Sider
    </div>
  </aside>
</Sider>
`;

exports[`Layout should be controlled by collapsed 2`] = `
<Sider
  collapsed={true}
>
  <aside
    className="ezd-layout-sider ezd-layout-sider-dark ezd-layout-sider-collapsed"
    style={
      Object {
        "flex": "0 0 80px",
        "maxWidth": "80px",
        "minWidth": "80px",
        "width": "80px",
      }
    }
  >
    <div
      className="ezd-layout-sider-children"
    >
      Sider
    </div>
  </aside>
</Sider>
`;
